add post,patch-MemoHandler
